test/manifests/ingress-collision-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-collision-1
  namespace: test
spec:
  rules:
    - host: ingress-collision-1.avast.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
  tls:
    - secretName: "notDefault"
      hosts:
        - ingress-valid-1.avast.com
